# cursor_projects

./: .gitignore
cursor_hft/: .cursorignore  .gitignore  CMakeLists.txt  Claude.md  DOCUMENTATION_CLEANUP_SUMMARY.md  README.md  cursor_hft_project_plan.md  hft_project_plan.md  performance_baselines.json
cursor_hft/benchmarks/: Claude.md
cursor_hft/benchmarks/market_data/: CMakeLists.txt  feed_handler_benchmark.cpp  venue_simulation_benchmark.cpp
cursor_hft/benchmarks/memory/: CMakeLists.txt  object_pool_benchmark.cpp  treasury_market_data_pool_benchmark.cpp
cursor_hft/benchmarks/messaging/: CMakeLists.txt  benchmark.cpp  spsc_ring_buffer_benchmark.cpp  treasury_market_data_ring_buffer_benchmark.cpp
cursor_hft/benchmarks/strategy/: advanced_market_maker_benchmark.cpp  benchmark_integrated_strategy.cpp  simple_market_maker_benchmark.cpp
cursor_hft/benchmarks/system/: end_to_end_benchmark.cpp
cursor_hft/benchmarks/timing/: CMakeLists.txt  hft_timer_benchmark.cpp  treasury_market_data_yield_benchmark.cpp
cursor_hft/benchmarks/trading/: order_book_benchmark.cpp
cursor_hft/claude/agents/: README.md  hft-code-reviewer.md  hft-component-builder.md  hft-performance-optimizer.md  hft-strategy-developer.md
cursor_hft/claude/commands/: README.md  parallel-code-review.md  parallel-strategy-development.md  prime-project-context.md  quick-setup.md
cursor_hft/claude/context/: README.md
cursor_hft/claude/prompts/: README.md  code_review.md  component_implementation.md  performance_optimization.md  strategy_development.md
cursor_hft/cursor_prompts/cursor_rules/: Readme.md  cpp_rules.md  final_verison.md  original_claude_proposal.md
cursor_hft/cursor_prompts/phase1/: timing_framework.md
cursor_hft/cursor_prompts/phase2/: first_attempt_lessons.md  lock_free_messaging_infra.md  second_attempt.md
cursor_hft/cursor_prompts/phase3/: object_pool_prompt.md  updates_prompt.md
cursor_hft/cursor_prompts/phase4_market_data/: market_data_prompt.md
cursor_hft/cursor_prompts/phase5/: 03_build_errors_prompt.md  04_test_errors_prompt.md  05_targeted_bug_fix.md  create_and_integrate_tests.md  feed_handler.md
cursor_hft/cursor_prompts/phase6/: venue_simulation_prompt.md
cursor_hft/docs/: AUTOMATED_BENCHMARKS.md  BENCHMARKING_GUIDE.md  Claude.md  PERFORMANCE_REPORT.md  architecture.md
cursor_hft/include/hft/: Claude.md
cursor_hft/include/hft/market_data/: feed_handler.hpp  treasury_instruments.hpp  venue_simulation.hpp
cursor_hft/include/hft/memory/: object_pool.hpp
cursor_hft/include/hft/messaging/: spsc_ring_buffer.hpp
cursor_hft/include/hft/monitoring/: production_monitoring_system.hpp
cursor_hft/include/hft/recovery/: fault_tolerance_manager.hpp
cursor_hft/include/hft/strategy/: advanced_market_maker.hpp  integrated_market_making_strategy.hpp  inventory_manager.hpp  market_data_processor.hpp  multi_strategy_manager.hpp  risk_integration.hpp  simple_market_maker.hpp  strategy_coordinator.hpp  treasury_quote_manager.hpp
cursor_hft/include/hft/timing/: hft_timer.hpp
cursor_hft/include/hft/trading/: order_book.hpp  order_lifecycle_manager.hpp  position_reconciliation_manager.hpp  risk_control_system.hpp  venue_router.hpp
cursor_hft/include/messaging/: event_loop.hpp  market_messages.hpp  message.hpp  message_dispatcher.hpp  ring_buffer.hpp
cursor_hft/scripts/: create_claude_structure.sh  install_dependencies.sh  manage_baseline.sh  run_benchmarks.sh  simple_benchmark_validator.py  test_benchmark_system.sh  validate_performance.py
cursor_hft/src/: test_setup.cpp
cursor_hft/src/timing/: hft_timer.cpp
cursor_hft/tests/: CMakeLists.txt  Claude.md
cursor_hft/tests/market_data/: CMakeLists.txt  feed_handler_test.cpp  venue_simulation_test.cpp
cursor_hft/tests/memory/: object_pool_test.cpp  treasury_market_data_pool_test.cpp
cursor_hft/tests/messaging/: ring_buffer_test.cpp  spsc_ring_buffer_test.cpp  treasury_market_data_ring_buffer_test.cpp
cursor_hft/tests/monitoring/: test_production_monitoring_system.cpp
cursor_hft/tests/recovery/: test_fault_tolerance_manager.cpp
cursor_hft/tests/strategy/: test_advanced_market_maker.cpp  test_integrated_market_making_strategy.cpp  test_inventory_manager.cpp  test_multi_strategy_manager.cpp  test_risk_integration.cpp  test_simple_market_maker.cpp  test_simple_market_maker_performance.cpp  test_strategy_coordinator.cpp  test_treasury_quote_manager.cpp
cursor_hft/tests/timing/: hft_timer_test.cpp  treasury_market_data_yield_test.cpp
cursor_hft/tests/trading/: order_book_test.cpp  test_order_lifecycle_manager.cpp  test_position_reconciliation_manager.cpp
